Adds creation of url

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,8 +14,9 @@ html
 
         .container
 
-            = render partial: 'flash_messages'
+						= yield
 
-            = yield
+						= render partial: 'modal'
+
 
     = javascript_include_tag :application, 'data-turbolinks-track': true
