--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,8 @@
  *= require_tree .
  *= require_self
  */
-@import "bootstrap-sprockets";
-@import "bootstrap";
+
+@import './application/bootstrap/variables';
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+@import 'application/**/*';
